Added about process section

--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -15,6 +15,7 @@
 @import './about/about-hero';
 @import './about/about-numbers';
 @import './about/about-us';
+@import './about/about-process';
 
 //contact page
 @import './contact/contact-hero';
