--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -1353,7 +1353,7 @@ a {
   }
 }
 
-.about-hero .about-hero-wrapper h3 {
+.about-hero h3 {
   text-align: center;
   color: #fff;
   text-align: center;
@@ -1363,55 +1363,55 @@ a {
 }
 
 @media screen and (min-width: 320px) {
-  .about-hero .about-hero-wrapper h3 {
+  .about-hero h3 {
     font-size: 4vw;
   }
 }
 
 @media screen and (min-width: 980px) {
-  .about-hero .about-hero-wrapper h3 {
+  .about-hero h3 {
     font-size: 2.5vw;
   }
 }
 
 @media screen and (min-width: 1240px) {
-  .about-hero .about-hero-wrapper h3 {
+  .about-hero h3 {
     font-size: 2vw;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .about-hero .about-hero-wrapper h3 {
+  .about-hero h3 {
     font-size: 1.2vw;
   }
 }
 
-.about-hero .about-hero-wrapper h1 {
+.about-hero h1 {
   text-align: center;
   color: #fff;
   font-weight: bold;
 }
 
 @media screen and (min-width: 320px) {
-  .about-hero .about-hero-wrapper h1 {
+  .about-hero h1 {
     font-size: 7vw;
   }
 }
 
 @media screen and (min-width: 980px) {
-  .about-hero .about-hero-wrapper h1 {
+  .about-hero h1 {
     font-size: 4.5vw;
   }
 }
 
 @media screen and (min-width: 1240px) {
-  .about-hero .about-hero-wrapper h1 {
+  .about-hero h1 {
     font-size: 3.5vw;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .about-hero .about-hero-wrapper h1 {
+  .about-hero h1 {
     font-size: 2.5vw;
   }
 }
@@ -1538,11 +1538,6 @@ a {
   }
 }
 
-.about-numbers .numbers-wrapper .right-part-numbers {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
-}
-
 @media screen and (min-width: 320px) {
   .about-numbers .numbers-wrapper .right-part-numbers {
     -ms-flex-preferred-size: 100%;
@@ -1630,9 +1625,46 @@ a {
 .about-us .about-us-wrapper h1 {
   font-size: 3rem;
   color: #000;
+  text-align: center;
 }
 
 .about-us .about-us-wrapper p {
+  line-height: 1.5;
+  color: #7e7d7d;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.work-process h1 {
+  font-size: 3rem;
+  color: #000;
+  padding: 3rem 0;
+  text-align: center;
+}
+
+.work-process .process-item img {
+  width: 60%;
+  margin: 0 auto;
+  height: 100%;
+  display: block;
+}
+
+.work-process .process-item h3 {
+  text-align: center;
+  color: #000;
+  font-weight: bold;
+  padding-top: 1rem;
+}
+
+.work-process .process-item h1 {
+  text-align: center;
+  color: #000;
+  line-height: 1;
+  padding: 1rem 0;
+}
+
+.work-process .process-item p {
+  text-align: center;
   line-height: 1.5;
   color: #7e7d7d;
   font-size: 1rem;
