--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -1635,6 +1635,42 @@ a {
   text-align: center;
 }
 
+@media screen and (min-width: 320px) {
+  .work-process {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .work-process {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .work-process {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .work-process {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .work-process {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .work-process {
+    padding: 0;
+  }
+}
+
 .work-process h1 {
   font-size: 3rem;
   color: #000;
@@ -1642,11 +1678,25 @@ a {
   text-align: center;
 }
 
+.work-process .process-item {
+  padding: 3rem 5rem;
+}
+
 .work-process .process-item img {
-  width: 60%;
   margin: 0 auto;
-  height: 100%;
   display: block;
+}
+
+@media screen and (min-width: 320px) {
+  .work-process .process-item img {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .work-process .process-item img {
+    width: 70%;
+  }
 }
 
 .work-process .process-item h3 {
