--- a/wordpress/wp-content/themes/architecture/scss/pages/blog/_blogitems.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/blog/_blogitems.scss
@@ -1,11 +1,31 @@
 .blog-content {
-  padding: 3rem 0 8rem;
+
+  @include breakpoint(mobile) {
+    padding: 3rem 2rem 5rem;
+  }
+
+  @include breakpoint(smallTablet) {
+    padding: 5rem 3rem 8rem;
+  }
+
+  @include breakpoint(tablet) {
+    padding: 3rem 5rem 8rem;
+  }
+
+  @include breakpoint(laptop) {
+    padding: 3rem 5rem 8rem;
+  }
+
+  @include breakpoint(desktop) {
+    padding: 5rem 0 8rem;
+  }
 
   h1 {
     font-size: 40px;
     padding: 2rem 0 1rem;
     color: $sectionHeadingColor;
   }
+
   .blog-content-wrapper {
     padding-top: 3rem;
 
@@ -37,7 +57,7 @@
         }
 
         .entry-title {
-          padding: .5rem 0 .5rem;
+          padding: 1.5rem 0 0;
 
           a {
             color: $sectionHeadingColor;
