Added hero section for service

--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -17,6 +17,10 @@
 @import './about/about-us';
 @import './about/about-process';
 
+//service page
+
+@import './service/hero-service';
+
 //contact page
 @import './contact/contact-hero';
 @import './contact/contact-form';
