--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -370,6 +370,7 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: normal;
+  color: #fff;
 }
 
 .hero {
@@ -1785,6 +1786,76 @@ a {
   line-height: 1.5;
   color: #7e7d7d;
   font-size: 1rem;
+}
+
+.service {
+  height: 70vh;
+}
+
+.service .service-title {
+  height: 100%;
+}
+
+.service .service-title h3 {
+  text-align: center;
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+  text-transform: uppercase;
+  padding-bottom: 1.5rem;
+}
+
+@media screen and (min-width: 320px) {
+  .service .service-title h3 {
+    font-size: 4vw;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .service .service-title h3 {
+    font-size: 2.5vw;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .service .service-title h3 {
+    font-size: 2vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .service .service-title h3 {
+    font-size: 1.2vw;
+  }
+}
+
+.service .service-title h1 {
+  text-align: center;
+  color: #fff;
+}
+
+@media screen and (min-width: 320px) {
+  .service .service-title h1 {
+    font-size: 7vw;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .service .service-title h1 {
+    font-size: 4.5vw;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .service .service-title h1 {
+    font-size: 3.5vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .service .service-title h1 {
+    font-size: 2.5vw;
+  }
 }
 
 .contact-hero {
