Added service items section

--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -20,6 +20,8 @@
 //service page
 
 @import './service/hero-service';
+@import './service/service-items';
+@import './service/components/service-btn';
 
 //contact page
 @import './contact/contact-hero';
