--- a/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
+++ b/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
@@ -15,3 +15,8 @@ $hoverBg: #fff;
 // sections
 $sectionHeadingColor: #000;
 $numberColor: #575757;
+
+// service
+$serviceBorder: #000;
+$serviceHoverBg: #000;
+$serviceTextColor: #fff;
