--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -1858,6 +1858,119 @@ a {
   }
 }
 
+@media screen and (min-width: 320px) {
+  .service-items {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .service-items {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .service-items {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .service-items {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .service-items {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .service-items {
+    padding: 0;
+  }
+}
+
+.service-items .service-item {
+  padding: 5rem 0 5rem;
+}
+
+.service-items .service-item h1 {
+  font-size: 3rem;
+  color: #000;
+  text-align: left;
+  padding: 1rem 0 2rem;
+}
+
+.service-items .service-item p {
+  color: #7e7d7d;
+  line-height: 1.5;
+  font-size: 1rem;
+}
+
+.service-items .service-item .service-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.service-btn {
+  margin: 2rem 0 5rem;
+  text-align: center;
+}
+
+.service-btn a {
+  padding: .8rem 1.4rem;
+  border: 1px solid #000;
+  position: relative;
+  text-transform: uppercase;
+  font-size: .8rem;
+  letter-spacing: 2px;
+  color: #000;
+}
+
+.service-btn a:hover {
+  background-color: #000;
+  color: #fff;
+  -webkit-transition: color .2s ease-in, background-color .2s ease-in;
+  transition: color .2s ease-in, background-color .2s ease-in;
+}
+
+.service-btn a:hover::after {
+  background-color: #fff;
+}
+
+.service-btn a:hover::before {
+  background-color: #fff;
+}
+
+.service-btn a::after {
+  content: '';
+  height: 1px;
+  width: 20px;
+  position: absolute;
+  right: -8%;
+  top: 50%;
+  background-color: #000;
+  z-index: 20;
+}
+
+.service-btn a::before {
+  content: '';
+  z-index: 20;
+  height: 1px;
+  width: 20px;
+  position: absolute;
+  left: -8%;
+  top: 50%;
+  background-color: #000;
+}
+
 .contact-hero {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6))), url("./assets/contact.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url("./assets/contact.jpg");
